# gl-boilerplate

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  gl-snippets.md
ex1-glad-glfw/: BUILD  glfw_glad_200es.cpp  glfw_glad_300es.cpp  glfw_glad_330.cpp  glfw_glad_410.cpp  glfw_glad_460.cpp  glfw_glad_legacy.cpp
ex2-glad2-glfw/: BUILD  glfw_glad2_200es.cpp  glfw_glad2_300es.cpp  glfw_glad2_300es_tf.cpp  glfw_glad2_330.cpp  glfw_glad2_410.cpp  glfw_glad2_460.cpp  glfw_glad2_legacy.cpp
ex3-glad2-glfw-egl/: BUILD  glfw_glad2_egl_200es.cpp  glfw_glad2_egl_300es.cpp
ex4-glad2-glfw-angle-egl/: BUILD  glfw_glad2_angle_egl_300es_tf.cpp  glfw_glad2_angle_egl_info.cpp
